[ignore] code cleanup
svn path=/trunk/eXist/; revision=18087


Former-commit-id: 896b45d7f33462d4477cb1c1a606c2c2d870eb9c